<resources>
    <string name="app_name">@string/travel_taipei</string>
    <string name="travel_taipei">Travel Doggy</string>
    <string name="travel_spot">遊憩景點</string>
    <string name="hot_news">最新消息</string>
    <string name="choose_language">選擇語言</string>
    <string name="tv_choose">選擇</string>
    <string name="see_more_hot_news">看更多消息</string>
    <string name="see_more_travel_spot">看更多景點</string>
    <string name="retry">重試</string>
    <string name="close">關閉</string>

    <!--  語言選擇  -->
    <string name="traditional_chinese">正體中文</string>
    <string name="simplified_chinese">简体中文</string>
    <string name="english">English</string>
    <string name="japanese_language">日本語</string>
    <string name="korea_language">한글</string>
    <string name="spanish">español</string>
    <string name="indonesian">Bahasa Indonesia</string>
    <string name="thai">ภาษาไทย</string>
    <string name="vietnamese">Tiếng Việt</string>

    <!--  API Message  -->
    <string name="api_error_message">系統忙碌中，請稍後再試</string>
    <string name="api_no_data">很抱歉! 目前無資料</string>
    <string name="events_api">(Events API)</string>

    <!--  景點內頁  -->
    <string name="tv_open_time">營業時間:</string>
    <string name="tv_address">地址:</string>
    <string name="tv_internet_address">網址:</string>
    <string name="tv_contract_phone">連絡電話:</string>


</resources>