<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/llGapB"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/svTemp"
            app:layout_constraintHeight_percent="0.15"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/llGapA"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/svTemp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="bottom"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/llGapB">

            <LinearLayout
                android:id="@+id/llFrame"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_radius_16_top_white"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp">


                    <TextView
                        android:id="@+id/tvTitle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingLeft="16dp"
                        android:textSize="22sp"
                        android:text="@string/choose_language"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/ivClose"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="10dp"
                        android:paddingRight="16dp"
                        android:src="@drawable/ic_close_gray" />
                </LinearLayout>


                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/cle8e8e8" />

                <androidx.core.widget.NestedScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <RadioGroup
                            android:id="@+id/radioGroup"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingTop="10dp"
                            android:paddingBottom="20dp"
                            android:paddingLeft="16dp"
                            android:checkedButton="@+id/radio_button_1">

                            <RadioButton
                                android:id="@+id/rbTraditionalCh"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_marginBottom="10dp"
                                android:textSize="18sp"
                                android:text="@string/traditional_chinese" />

                            <RadioButton
                                android:id="@+id/rbSimpleCh"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_marginBottom="10dp"
                                android:textSize="18sp"
                                android:text="@string/simplified_chinese" />

                            <RadioButton
                                android:id="@+id/rbEnglish"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_marginBottom="10dp"
                                android:textSize="18sp"
                                android:text="@string/english" />

                            <RadioButton
                                android:id="@+id/rbJapanese"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_marginBottom="10dp"
                                android:textSize="18sp"
                                android:text="@string/japanese_language" />

                            <RadioButton
                                android:id="@+id/rbKorea"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_marginBottom="10dp"
                                android:textSize="18sp"
                                android:text="@string/korea_language" />

                            <RadioButton
                                android:id="@+id/rbSpanish"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_marginBottom="10dp"
                                android:textSize="18sp"
                                android:text="@string/spanish" />

                            <RadioButton
                                android:id="@+id/rbIndonesian"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_marginBottom="10dp"
                                android:textSize="18sp"
                                android:text="@string/indonesian" />

                            <RadioButton
                                android:id="@+id/rbThai"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_marginBottom="10dp"
                                android:textSize="18sp"
                                android:text="@string/thai" />

                            <RadioButton
                                android:id="@+id/rbVietnamese"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_marginBottom="10dp"
                                android:textSize="18sp"
                                android:text="@string/vietnamese" />
                        </RadioGroup>

                    </LinearLayout>

                </androidx.core.widget.NestedScrollView>
            </LinearLayout>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>
